# Fritter

./: .coveragerc  .gitignore  .pydoctor.cfg  .readthedocs.yaml  README.md  dev-requirements.in  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yaml
docs/: Makefile  asyncio_driver_example.py  civil.rst  civil_example.py  conf.py  drop_repeat.py  friendminder.py  index.rst  introduction.rst  json_basic_reminder.py  json_example.py  json_identity.py  json_instance.py  json_just_load.py  json_just_save.py  json_load_id.py  json_methods_example.py  json_save_repeat.py  json_save_repeat_id.py  json_weekly_friend.py  persistence.rst  quickstart.rst  repeat.rst  repeating_example.py  requirements.in  requirements.txt  simple_repeat.py  tree_example.py  tree_scaling_example.py  trees.rst  twisted_driver_example.py
src/fritter/: __init__.py  asyncio_driver.py  boundaries.py  heap.py  jsonterm.py  longterm.py  memory_driver.py  priority_queue.py  recur.py  recursive_driver.py  repeat.py  repeater.py  scheduler.py  tree.py  twisted_driver.py
src/fritter/drivers/: __init__.py  asyncio.py  datetime.py  memory.py  scheduling.py  sleep.py  twisted.py
src/fritter/persistent/: __init__.py  core.py  database.py  json.py  jsonable.py
src/fritter/repeat/: __init__.py
src/fritter/repeat/rules/: __init__.py  datetimes.py  (+1 more)
src/fritter/test/: __init__.py  test_asyncio.py  test_datetime.py  test_json.py  test_longterm.py  test_pq.py  test_repeat.py  test_scheduler.py  test_sleep.py  test_testing.py  test_tree.py  test_twisted.py
