[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fritter"
authors = [{name = "Glyph", email = "glyph@glyph.im"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
  "datetype",
  "tzdata",
]

[project.urls]
Home = "https://github.com/glyph/fritter"

[tool.black]
line-length = 79
